--- a/Stat_NLP_Project.ipynb
+++ b/Stat_NLP_Project.ipynb
@@ -1513,31 +1513,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Example 5 - predicted : ('male',)\n",
+      "Example 5 - predicted : ('15', 'student', 'female', 'libra')\n",
       "Example 5 - Actual : ('15', 'student', 'female', 'libra')\n",
       "Example 5 - Actual_before mlb transformation : ['female', '15', 'student', 'libra']\n"
      ]
     }
    ],
    "source": [
-    "print(\"Example 5 - predicted :\",Y_pred_inv[892])\n",
-    "print(\"Example 5 - Actual :\",Y_test_trans_inv[892])\n",
+    "print(\"Example 5 - predicted :\",Y_pred_inv[89])\n",
+    "print(\"Example 5 - Actual :\",Y_test_trans_inv[89])\n",
     "print(\"Example 5 - Actual_before mlb transformation :\",Y_test[892])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Learnings / Conclusions:\n",
+    "1. Have executed this model with 30k/60k/25k samples too. But everytime model is overfitting like how it is demonstrated in above result. \n",
+    "2. Lemmatization is used as an additional step in the pre processing, still it is not impacting model generalisation.  "
+   ]
   },
   {
    "cell_type": "code",
